# rethinkdb.rs

./: .gitignore  Cargo.toml  README.md
src/: README.md  connection.rs  db.rs  error.rs  lib.rs  macros.rs  test.rs
src/lib/: api.rs  client.rs  connection.rs  db.rs  error.rs  mod.rs  ql2.rs  query.rs  test.rs
src/reql/: README.md  command.rs  mod.rs  tree.rs
