[package]
name = "rethinkdb.rs"
version = "0.0.1"
authors = ["abraaoisvi <abraao.isvi@gmail.com>", "paulo suzart <paulosuzart@gmail.com>"]
license = "MIT"
repository = "https://github.com/jimberlage/rethinkdbrust"
description = """
Rust native driver for RethinkDB 2.0. WIP.
"""

[dependencies]
byteorder = "*"
protobuf = "*"
rustc-serialize = "*"

[lib]
name = "rethinkdb"
path = "src/lib/mod.rs"

