[package]
name = "rethinkdb.rs"
version = "0.0.1"
authors = ["Jim Berlage <james.berlage@gmail.com>", "abraaoisvi <abraao.isvi@gmail.com>", "paulo suzart <paulosuzart@gmail.com>"]
license = "MIT"
repository = "https://github.com/jimberlage/rethinkdb.rs"
description = """
Rust native driver for RethinkDB 2.0. WIP.
"""

[dependencies]
byteorder = "*"
protobuf = "*"
rustc-serialize = "*"
scram = "*"

[lib]
name = "rethinkdb"
path = "src/lib/mod.rs"

